--- a/index.qmd
+++ b/index.qmd
@@ -2,7 +2,7 @@
 title: "Welcome to My Analytics Lab"
 ---
 
-Hello!! My name is xxx xxxx.
+Hello!! My name is Batıhan KONUK.
 
 This is my personal webpage.
 
