--- a/about.qmd
+++ b/about.qmd
@@ -3,35 +3,36 @@ title: "About Me"
 sidebar: false 
 ---
 
-![](assets/images/vesikalik.jpeg){fig-align="center"}
+![](images/BK_Foto.jpg){width="136"}
 
 # Education
 
--   B.S., ................................., ....................................University, Turkey, 20xx - 20xx.
--   M.S., Industrial Engineering, Hacettepe University, Turkey, 20xx - ongoing.
+-   B.S., Statistics, Hacettepe University, Turkey, 2016 - 2020.
+-   Minor B.S., Industrial Engineering, Hacettepe University, Turkey, 2017 - 2020.
+-   M.S., Financial Economy, Hacettepe University, Turkey, 2020 - 2021
+-   M.S., Industrial Engineering, Hacettepe University, Turkey, 2021 - 2024.
 -   Ph.D.., Industrial Engineering, Hacettepe University, Turkey, 20xx - ongoing.
 
 # Work Experience
 
 ## Employements
 
-1.  Firm xxx, position xx, year xxx
+1.  Philip Morris International, position EZD Merchandiser , year 2015
 
-2.  Firm yyy, position yyy, year yyy
+2.  Yapı ve Kredi Bankası A.Ş., position Coorparate Banking Assistant Specialist, year 2020
+
+3.  TÜBİTAK, position Scientific Program Expert, year 2021 - ongoing
 
 ## Internships
 
-1.  Firm aaa, position xx, year xxx
+1.  Garanti Yatırım A.Ş., position Finance Intern, year 2018
 
-2.  Firm bbb, position yyy, year yyy
-
-# Projects
-
-1.  TUBİTAK 1001..........................
+2.  Türk Traktör A.Ş. position Mentor, year 2019 - 2020
 
 # Publications
 
-1.  Dasdemir, E., Batta, R., Koksalan, M., Tezcaner Ozturk, D. (2022) “UAV Routing for Reconnaissance Mission: A Multi-Objective Orienteering Problem with Time-Dependent Prizes and Multiple Connections”, Computers & Operations Research, 145: 105882.
+1.  Ozcan, K. N., Yesilyurt, O., Demir, S., & Konuk, B. (2022). Industry 4.0 concepts, technologies, and its ecosystem. In *Industry 4.0: Technologies, Applications, and Challenges* (pp. 1-33). Singapore: Springer Nature Singapore.
+2.  Ozcan, M. B., Konuk, B., & Yesilcimen, Y. M. (2022). Big Data Analytics in Industry 4.0. In *Industry 4.0: Technologies, Applications, and Challenges* (pp. 171-199). Singapore: Springer Nature Singapore.
 
 # Competencies
 
